--- a/src/component/composent.css
+++ b/src/component/composent.css
@@ -1,17 +1,23 @@
+.contenu {
+    font-size: 20px;
+    text-align: justify;
+    padding: 20px 4vw;
+    height: 100vh;
+    color: #333;
+    background: white;
+    transition: all 0.2s ease-in-out;
+
+}
 h1{
     text-align: center;
-    font-size: 35px;
-    color: #333;
-    background: #f1f1f1;
-    transition: all 0.2s ease-in-out;
 }
-
 .contenu.dark {
-    color:#f1f1f1;
+    color:white;
     background: #333;
 }
 
-.contenu.light{
-    color: #333;
-    background: #f1f1f1;
+.contenu.light {
+
+color: #333;
+background: white;
 }
