--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,43 @@
-.App {
+body {
+  height: 100vh;
+  margin: 0;
+}
+
+.app {
+  transition: background 0.2s linear;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.btn{
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 90px;
+  height: 50px;
+  background:#333;
+  border: 1px solid black;
+  color: white;
+  border-radius:25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.image{
-  display: flex;
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text {
+  margin-bottom: 20px;
+  font-size: 18px;
 }
