--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
 
 .app {
   transition: background 0.2s linear;
+  
 }
 
 #root {
@@ -12,7 +13,7 @@ body {
   width: 100%;
 }
 
-.btn{
+.btn-1{
   position: fixed;
   top: 20px;
   right: 20px;
