--- a/src/api/score.css
+++ b/src/api/score.css
@@ -1,5 +1,13 @@
 .score {
   
-    height: 150px;
-    width: 200px;
+   
+    width: 600px;
+    height: 100px;
+    display: block;
+}
+
+.img-avatar{
+    width: 80px;
+    height: 80px;
+   
 }
